Manejo de archivos completo 70% curso

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <img src="http://localhost:3000/imagen/usuarios/5cc35ac04322de39b03c2627-80.jpg" alt="">
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <script>
         function onSignIn(googleUser) {
